--- a/src/Component/About/About.css
+++ b/src/Component/About/About.css
@@ -1,6 +1,6 @@
 
 .about {
-    padding: 4rem 4rem 4rem 4rem;
+    padding: 4rem 4rem 3rem 4rem;
     position: relative;
     margin-top: 26rem;
     z-index: 100;
@@ -17,12 +17,12 @@ align-items: center;
   z-index: 8;
   gap: 0px;
   font-weight: 200;
-  font-size: 14px;
-  color: #c7c7c7;
+  font-size: 18px;
+  color: #fff;
 }
 .text {
     color: white;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
    
 }
 .about-body {
