--- a/src/Component/Explore/Explore.css
+++ b/src/Component/Explore/Explore.css
@@ -1,5 +1,5 @@
 .explore {
-    padding: 5rem 4rem 0rem 4rem;
+    padding: 3rem 4rem 0rem 4rem;
     position: relative;
     
 }
@@ -12,12 +12,12 @@ align-items: center;
   z-index: 8;
   gap: 0px;
   font-weight: 200;
-  font-size: 14px;
-  color: #c7c7c7;
+  font-size: 18px;
+  color: #fff;
 }
 .text {
     color: white;
-    font-size: 1.4rem;
+    font-size: 25px;
    
 }
 
