--- a/src/Component/Founder/Founder.css
+++ b/src/Component/Founder/Founder.css
@@ -19,7 +19,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
   padding: 2rem 1.5rem;
     z-index: 1;
 }
@@ -76,9 +76,7 @@
     .founder-preview {
         height: auto;
     }
-    .founder-preview>div:nth-of-type(3)>img {
-        height: auto;
-    }
+ 
 }
 
 @media screen and (max-width:992px) {
