--- a/src/Component/Insight/Insight.css
+++ b/src/Component/Insight/Insight.css
@@ -13,12 +13,12 @@ align-items: center;
   z-index: 8;
   gap: 0px;
   font-weight: 200;
-  font-size: 14px;
-  color: #c7c7c7;
+  font-size: 18px;
+  color: #fff;
 }
 .text {
     color: white;
-    font-size: 1.4rem;
+    font-size: 25px;
    
 }
 
@@ -138,6 +138,9 @@ filter: blur(125px);
       object-fit: cover;
       width: 100%;
      
+    }
+    .insight-preview>div:nth-of-type(2) {
+        padding-left: 0rem;
     }
 }
 
