--- a/src/Component/New/New.css
+++ b/src/Component/New/New.css
@@ -2,7 +2,7 @@
 .new {
     position: relative;
     z-index: 10;
-    padding: 3rem 4rem 3rem 4rem;
+    padding: 2rem 4rem 2rem 4rem;
     gap: 2rem;
     display: flex;
 }
@@ -26,12 +26,12 @@ align-items: center;
   z-index: 8;
   gap: 0px;
   font-weight: 200;
-  font-size: 14px;
-  color: #c7c7c7;
+  font-size: 18px;
+  color: #fff;
 }
 .text {
     color: white;
-    font-size: 1.4rem;
+    font-size: 25px;
    
 }
 
