--- a/src/Component/Work/Work.css
+++ b/src/Component/Work/Work.css
@@ -1,10 +1,11 @@
 .work {
-    padding: 0rem 4rem 4rem 4rem;
+    padding: 0rem 4rem 0rem 4rem;
     display: flex;
     justify-content: center;
     position: relative;
   align-items: center;
    gap: 2rem;
+   margin-top: -6rem;
 }
 .work-l {
     flex: 4;
@@ -27,12 +28,12 @@ align-items: center;
   z-index: 8;
   gap: 0px;
   font-weight: 200;
-  font-size: 14px;
-  color: #c7c7c7;
+  font-size: 18px;
+  color: #fff;
 }
 .text {
     color: white;
-    font-size: 1.4rem;
+    font-size: 1.57rem;
    
 }
 .work-r>h2 {
